--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -100,6 +100,10 @@ import Layout from "../layouts/Layout.astro";
           and more secure.
         </p>
         <p class="mt-2">
+          The initial site and some of the boilerplate was built using Claude
+          Code.
+        </p>
+        <p class="mt-2">
           Interactivity is cool...can be cool...but not if it takes down your
           computer loading a website while you're looking for a recipe for mac
           and cheese. So I don't have any of that crap here.
